# learning-rust

./: .gitignore  README.md
07_managing_growing_projects_with_package_crates_and_modules/bringing_paths_into_scope_with_the_use_keyword/: Cargo.toml
09_error_handling/recover_errors_with_result/: Cargo.toml
09_error_handling/to_panic_or_not_panic/: Cargo.toml
09_error_handling/unrecoverable_errors_with_panic/: Cargo.toml
13_functional_language_features_iterators_and_closures/closures_anonymous_function_that_can_capture_their_environment/: Cargo.toml
13_functional_language_features_iterators_and_closures/comparing_performance_loops_vs_iterators/: Cargo.toml
13_functional_language_features_iterators_and_closures/improving_out_io_project/: Cargo.toml
14_more_about_cargo_and_crates_io/customizing_builds_with_release_profiles/: Cargo.toml
14_more_about_cargo_and_crates_io/customizing_builds_with_release_profiles/src/: main.rs
14_more_about_cargo_and_crates_io/installing_binaries_from_crates_io_with_cargo_install/: Cargo.toml
14_more_about_cargo_and_crates_io/publishing_a_crate_to_crates_io/: Cargo.toml
15_smart_pointers/using_box_to_point_to_data_on_the_heap/: Cargo.toml
18_patterns_and_matching/all_the_places_pattern_can_be_used/: Cargo.toml
19_advanced_features/macros/: Cargo.toml
a_hands_on_tutorial_for_zero_knowledge_proofs/part_I/: Cargo.toml
a_hands_on_tutorial_for_zero_knowledge_proofs/part_III/: Cargo.toml
a_hands_on_tutorial_for_zero_knowledge_proofs/part_III/src/: lib.rs  main.rs
circuit_exercise/chip_examples/: Cargo.toml
(+110 files in other folders)
